--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Plant Doctor</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AI Plant Doctor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-light">
-  <div class="container py-5">
-    <h2 class="text-center mb-4">🌿 AI Plant Doctor</h2>
-    
-    <div class="card p-4 shadow rounded-4">
-      <form id="upload-form">
-        <div class="mb-3">
-          <label for="file" class="form-label">Upload Plant Leaf Image</label>
-          <input class="form-control" type="file" id="file" name="file" accept="image/*" required>
+    <div class="container py-5">
+        <h2 class="text-center mb-4">🌿 AI Plant Doctor</h2>
+
+        <div class="card p-4 shadow rounded-4">
+            <form id="upload-form">
+                <div class="mb-3">
+                    <label for="file" class="form-label">Upload Plant Leaf Image</label>
+                    <input class="form-control" type="file" id="file" name="file" accept="image/*" required>
+                </div>
+                <button class="btn btn-success w-100" type="submit">Diagnose</button>
+            </form>
+
+            <div id="result" class="mt-4 alert d-none"></div>
         </div>
-        <button class="btn btn-success w-100" type="submit">Diagnose</button>
-      </form>
-
-      <div id="result" class="mt-4 alert d-none"></div>
     </div>
-  </div>
 
-  <script>
-    const form = document.getElementById('upload-form');
-    const resultBox = document.getElementById('result');
+    <script>
+        const form = document.getElementById('upload-form');
+        const resultBox = document.getElementById('result');
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const fileInput = document.getElementById('file');
-      const formData = new FormData();
-      formData.append('file', fileInput.files[0]);
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const fileInput = document.getElementById('file');
+            const formData = new FormData();
+            formData.append('file', fileInput.files[0]);
 
-      resultBox.className = "alert alert-info";
-      resultBox.textContent = "🧠 Diagnosing...";
+            resultBox.className = "alert alert-info";
+            resultBox.textContent = "🧠 Diagnosing...";
 
-      try {
-        const res = await fetch('/api/predict', {
-          method: 'POST',
-          body: formData
+            try {
+                const res = await fetch('/api/predict', {
+                    method: 'POST',
+                    body: formData
+                });
+
+                const data = await res.json();
+
+                if (res.ok) {
+                    resultBox.className = "alert alert-success";
+                    resultBox.innerHTML = `
+                    <strong>Prediction:</strong> ${data.prediction}<br/>
+                    <strong>Confidence:</strong> ${(data.confidence * 100).toFixed(2)}%<br/>
+                    <strong>Treatment:</strong> ${data.treatment}
+                    `;
+                } else {
+                    throw new Error(data.detail || "Prediction failed.");
+                }
+
+            } catch (err) {
+                resultBox.className = "alert alert-danger";
+                resultBox.textContent = `❌ Error: ${err.message}`;
+            }
         });
-
-        const data = await res.json();
-
-        if (res.ok) {
-          resultBox.className = "alert alert-success";
-          resultBox.innerHTML = `<strong>Prediction:</strong> ${data.prediction} <br/><strong>Confidence:</strong> ${(data.confidence * 100).toFixed(2)}%`;
-        } else {
-          throw new Error(data.detail || "Prediction failed.");
-        }
-
-      } catch (err) {
-        resultBox.className = "alert alert-danger";
-        resultBox.textContent = `❌ Error: ${err.message}`;
-      }
-    });
-  </script>
+    </script>
 </body>
+
 </html>
