--- a/public/index.html
+++ b/public/index.html
@@ -1,81 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Plant Doctor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AI Plant Doctor</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    #preview-img {
+      transition: opacity 0.3s ease;
+      max-height: 300px;
+    }
+  </style>
 </head>
-
 <body class="bg-light">
-    <div class="container py-5">
-        <h2 class="text-center mb-4">🌿 AI Plant Doctor</h2>
-
-        <div class="card p-4 shadow rounded-4">
-            <form id="upload-form">
-                <div class="mb-3">
-                    <label for="file" class="form-label">Upload Plant Leaf Image</label>
-                    <input class="form-control" type="file" id="file" name="file" accept="image/*" required>
-                </div>
-
-                <div class="mb-3">
-                    <label class="form-label">Language</label>
-                    <select class="form-select" name="lang" id="lang">
-                        <option value="en" selected>English</option>
-                        <option value="si">සිංහල</option>
-                        <option value="ta">தமிழ்</option>
-                    </select>
-                </div>
-
-                <button class="btn btn-success w-100" type="submit">Diagnose</button>
-            </form>
-
-            <div id="result" class="mt-4 alert d-none"></div>
+  <div class="container py-5">
+    <h2 class="text-center mb-4">
+      <span class="me-2">🍃</span>AI Plant Doctor
+    </h2>
+    <div class="d-flex justify-content-end mb-3">
+        <a href="/dashboard" class="btn btn-outline-primary">📊 Dashboard</a>
+      </div>
+    <div class="card p-4 shadow rounded-4">
+      <form id="upload-form">
+        <div class="mb-3">
+          <label for="file" class="form-label">Upload Plant Leaf Image</label>
+          <input class="form-control" type="file" id="file" name="file" accept="image/*" required>
         </div>
+
+        <div class="mb-3">
+          <label class="form-label">Language</label>
+          <select class="form-select" name="lang" id="lang">
+            <option value="en" selected>English</option>
+            <option value="si">සිංහල</option>
+            <option value="ta">தமிழ்</option>
+          </select>
+        </div>
+
+        <button class="btn btn-success w-100" type="submit">Diagnose</button>
+      </form>
+
+      <img id="preview-img" class="img-fluid rounded my-4 d-none" alt="Leaf Preview" />
+
+      <div id="result" class="mt-3 alert d-none"></div>
     </div>
+  </div>
 
-    <script>
-        const form = document.getElementById('upload-form');
-        const resultBox = document.getElementById('result');
+  <script>
+    const form = document.getElementById('upload-form');
+    const resultBox = document.getElementById('result');
+    const previewImage = document.getElementById('preview-img');
 
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const fileInput = document.getElementById('file');
-            const formData = new FormData();
-            formData.append('file', fileInput.files[0]);
-            formData.append('lang', document.getElementById('lang').value);
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const fileInput = document.getElementById('file');
+      const lang = document.getElementById('lang').value;
+      const file = fileInput.files[0];
+      const formData = new FormData();
 
-            resultBox.className = "alert alert-info";
-            resultBox.textContent = "🧠 Diagnosing...";
+      formData.append('file', file);
+      formData.append('lang', lang);
 
-            try {
-                const res = await fetch('/api/predict', {
-                    method: 'POST',
-                    body: formData
-                });
+      // Show image preview
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        previewImage.src = e.target.result;
+        previewImage.classList.remove("d-none");
+      };
+      reader.readAsDataURL(file);
 
-                const data = await res.json();
+      resultBox.className = "alert alert-info";
+      resultBox.textContent = "🧠 Diagnosing...";
 
-                if (res.ok) {
-                    resultBox.className = "alert alert-success";
-                    resultBox.innerHTML = `
-                                <strong>Prediction:</strong> ${data.label}<br/>
-                                <strong>Confidence:</strong> ${(data.confidence * 100).toFixed(2)}%<br/>
-                                <strong>Treatment:</strong> ${data.treatment}<br/>
-                                ${data.video ? `<a href="${data.video}" target="_blank">📺 Watch Treatment Video</a><br/>` : ""}
-                                ${data.product ? `<a href="${data.product}" target="_blank">🛒 Buy Product</a>` : ""}
-                    `;
-                } else {
-                    throw new Error(data.detail || "Prediction failed.");
-                }
-
-            } catch (err) {
-                resultBox.className = "alert alert-danger";
-                resultBox.textContent = `❌ Error: ${err.message}`;
-            }
+      try {
+        const res = await fetch('/api/predict', {
+          method: 'POST',
+          body: formData
         });
-    </script>
-</body>
 
+        const data = await res.json();
+
+        if (res.ok) {
+          resultBox.className = "alert alert-success";
+          resultBox.innerHTML = `
+            <strong>Prediction:</strong> ${data.label}<br/>
+            <strong>Confidence:</strong> ${(data.confidence * 100).toFixed(2)}%<br/>
+            <strong>Treatment:</strong> ${data.treatment}<br/>
+            ${data.video ? `<a href="${data.video}" target="_blank">📺 Watch Treatment Video</a><br/>` : ""}
+            ${data.product ? `<a href="${data.product}" target="_blank">🛒 Buy Product</a>` : ""}
+          `;
+        } else {
+          throw new Error(data.detail || "Prediction failed.");
+        }
+
+      } catch (err) {
+        resultBox.className = "alert alert-danger";
+        resultBox.textContent = `❌ Error: ${err.message}`;
+      }
+    });
+  </script>
+</body>
 </html>
